<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>sky360_camera</name>
    <version>0.0.1</version>
    <description>ROS2 Node for Publishing Images and Information</description>
    <maintainer email="you@example.com">Your Name</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>rcl_interfaces</depend>
    <depend>boost</depend>
    <depend>OpenCV</depend>

    <member_of_group>rosidl_interface_packages</member_of_group>
    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
